{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 78,
  "lineage": "086d99fd-488f-c55d-e0db-26f7bf690e6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a389d359bbc8639",
            "arn": "arn:aws:ec2:ap-south-1:879765115308:elastic-ip/eipalloc-07a389d359bbc8639",
            "domain": "vpc",
            "id": "eipalloc-07a389d359bbc8639",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-217-149.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.217.149",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-eks-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:internet-gateway/igw-0af4739bc1356c53b",
            "id": "igw-0af4739bc1356c53b",
            "owner_id": "879765115308",
            "tags": {
              "Name": "my-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "my-eks-cluster-igw"
            },
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a389d359bbc8639",
            "association_id": "eipassoc-03279463dd9ba4ff5",
            "connectivity_type": "public",
            "id": "nat-086e29dc14db77943",
            "network_interface_id": "eni-057cbcb95ee86d389",
            "private_ip": "10.0.1.161",
            "public_ip": "3.6.217.149",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002c15e55a772c5c2",
            "tags": {
              "Name": "my-eks-cluster-nat"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:route-table/rtb-06d510ce952c314d8",
            "id": "rtb-06d510ce952c314d8",
            "owner_id": "879765115308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086e29dc14db77943",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:route-table/rtb-0d72ecb720c17df21",
            "id": "rtb-0d72ecb720c17df21",
            "owner_id": "879765115308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af4739bc1356c53b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9ddbf277a80ad13",
            "route_table_id": "rtb-06d510ce952c314d8",
            "subnet_id": "subnet-0f15ae02de10240c1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d485bd5cbb8552b8",
            "route_table_id": "rtb-06d510ce952c314d8",
            "subnet_id": "subnet-0c71dce6ec073b8ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019fbdd2c205809e0",
            "route_table_id": "rtb-0d72ecb720c17df21",
            "subnet_id": "subnet-002c15e55a772c5c2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b212d628833e5050",
            "route_table_id": "rtb-0d72ecb720c17df21",
            "subnet_id": "subnet-0ada2024d6c44255e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:security-group/sg-0de11088bf714fd70",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de11088bf714fd70",
            "ingress": [],
            "name": "my-eks-cluster-cluster-sg",
            "name_prefix": "",
            "owner_id": "879765115308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-cluster-sg"
            },
            "tags_all": {
              "Name": "my-eks-cluster-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:security-group/sg-0cde4f4221a9b4c93",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cde4f4221a9b4c93",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de11088bf714fd70"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-eks-cluster-nodes-sg",
            "name_prefix": "",
            "owner_id": "879765115308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-cluster-nodes-sg"
            },
            "tags_all": {
              "Name": "my-eks-cluster-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.eks_cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:subnet/subnet-0f15ae02de10240c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f15ae02de10240c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879765115308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:subnet/subnet-0c71dce6ec073b8ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c71dce6ec073b8ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "879765115308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-private-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-private-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:subnet/subnet-002c15e55a772c5c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c15e55a772c5c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879765115308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-1",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:subnet/subnet-0ada2024d6c44255e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ada2024d6c44255e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "879765115308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-eks-cluster-public-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "my-eks-cluster-public-2",
              "kubernetes.io/cluster/my-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0ccdcbad133f8c02f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:879765115308:vpc/vpc-0ccdcbad133f8c02f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-090582584ae96b91c",
            "default_route_table_id": "rtb-059cfdeb0d9793285",
            "default_security_group_id": "sg-04bd2f658e0f57774",
            "dhcp_options_id": "dopt-067c26b33903b02e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccdcbad133f8c02f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059cfdeb0d9793285",
            "owner_id": "879765115308",
            "tags": {
              "Name": "my-eks-cluster-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-eks-cluster-vpc",
              "kubernetes.io/cluster/my-eks-cluster": "shared"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}